# passport-prime

./: .gitignore  Cargo.toml  README.md  app-config.toml  sim
.github/workflows/: ci.yml
docs/: identity-derivation.md  onboarding-flow.md  sideloading.md  trng-spike.md  vault-integration.md
i18n/: en.json  es.json
src/: bip39.rs  entropy.rs  identity.rs  main.rs  store.rs  theme.rs  wizard.rs  wordlist-english.txt
src/urb/: boot.rs  encoder.rs  mine.rs  mod.rs  spawn.rs  tweak.rs  tx.rs
theme/: theme.json
ui/: app.slint  cyber.slint  gw-bridge.slint
ui/pages/: page.slint  props.slint
ui/pages/create/: page.slint  props.slint
ui/pages/second/: page.slint  props.slint
wasm/: Cargo.toml  README.md  index.html  run_wasm.mjs
wasm/src/: lib.rs
