[package]
name = "urb-wasm"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone workspace: keep this out of the parent (device) workspace so it
# doesn't drag in the xous/KeyOS deps or target config.
[workspace]

[lib]
# cdylib -> the wasm module; rlib -> so the native `selftest` bin can link it.
crate-type = ["cdylib", "rlib"]

[dependencies]
# The exact same crates the device core uses — all pure-Rust, wasm32-clean.
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "schnorr"] }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "precomputed-tables"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
